fixed photo size on tablet and iphone

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -48,7 +48,7 @@ nav {
 
 .article img, .article iframe {
   height: 65vw;
-  width: 96.5vw;
+  width: 93.5vw;
 }
 
 .remove_br_iphone {
@@ -108,7 +108,7 @@ nav {
 
 .article img, .article iframe {
   height: 65vw;
-  width: 96.5vw;
+  width: 94.5vw;
 }
 
 .remove_br_ipad {
